# QGA

./: .gitignore  CGA.py  Journal  QGA_BCQO_fixed_point_test.py  QGA_BCQO_quantum_channels.py  QGA_BCQO_sim.py  QGA_QF.py  QGA_QF_performance_report.py  QGA_QF_qch_cmp.py  QGA_QF_quantum_channels_2.py  QGA_UQCM_fixed_point_test.py  QGA_UQCM_quantum_channels.py  QGA_UQCM_sim.py  QGA_performance_report.py  QGA_performance_report_simbasis.py  QPW_sim.py  README.md  cGA_general_simulation.py  comparison_href.py  general_simulation.py  general_simulation_pm_sweep.py  pyproject.toml  quantum_mats.py  ref_hamiltonians  requirements.txt
inputs/: input_model.yaml  input_qga_uqcm.yaml  input_qga_variants.yaml
notebooks/: qga_variant_analysis.ipynb
out_QPW_uqcm_4_2/problem_0/: fidelity_tracks_000.npy  fidelity_tracks_001.npy  fidelity_tracks_002.npy  fidelity_tracks_003.npy  fidelity_tracks_004.npy  fidelity_tracks_005.npy  fidelity_tracks_006.npy  fidelity_tracks_007.npy  final_population_000.npy  final_population_001.npy  final_population_002.npy  final_population_003.npy  final_population_004.npy  final_population_005.npy  final_population_006.npy  final_population_007.npy
src/: feature_trackers.py  problem_generators.py  qga_simulator.py  quantum_genetic_algorithm.py  state_generators.py  yalm_parser.py
src/generators/: problem_generators.py  state_generators.py
tests/: test_feature_trackers.py  test_parsers_yaml_parser.py  test_quantum_genetic_algorithm.py  test_subroutines_cloning.py  test_subroutines_mixing.py  test_subroutines_mutation.py  test_subroutines_sorting.py
(+19 files in other folders)
