[project]
name = "qga_toolbox"
version = "0.1.0"
authors = [
  { name="Ruben Ibarrondo", email="rubenibarrondo@gmail.com" },
]
description = "Simulations of the quantum genetic algorithm."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RubenIbarrondo/QGA"